# AltDataDashboard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: company_exposures.yml  portwatch.yml
docs/: architecture.md  data-model.md  project-structure.md
src/portwatch/: __init__.py  backfill.py  cli.py  config.py  models.py  port_service.py  project_config.py  registry.py  service.py  validation.py
src/portwatch/analytics/: __init__.py  signals.py
src/portwatch/dashboard/: app.py
src/portwatch/ingestion/: census.py  port_of_la.py
src/portwatch/storage/: __init__.py  duckdb.py
tests/: test_analytics.py  test_census.py  test_port_operations.py  test_project_config.py  test_service.py  test_storage.py
tests/fixtures/: census_porths_response.json  port_of_la_container_statistics.html
